--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
     <!-- this need same with resteasy servlet url-pattern -->
     <context-param>
         <param-name>resteasy.servlet.mapping.prefix</param-name>
-        <param-value>/</param-value>
+        <param-value>/engine</param-value>
     </context-param>
 
     <listener>
@@ -32,7 +32,7 @@
 
     <servlet-mapping>
         <servlet-name>resteasy-servlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/engine/*</url-pattern>
     </servlet-mapping>
 
 </web-app>
